Added Email Form

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 	<script src="js/pace.js"></script>
  
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
+	<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	
+</style>
 </head>
 
 <body>
@@ -33,23 +38,15 @@
  
 			<h1>An app that lets you <strong>TELL</strong> a story.</h1>
  
-			<div class="row">
-				<div class="col-md-6 col-sm-12 col-md-offset-3 subscribe">
-					<form class="form-horizontal" role="form" action="subscribe.php" id="subscribeForm" method="POST">
-						<div class="form-group">
-							<div class="col-md-7 col-sm-6 col-sm-offset-1 col-md-offset-0">
-								<input class="form-control input-lg" name="email" type="email" id="address" placeholder="Enter your email for updates" data-validate="validate(required, email)" required="required">
-							</div>
-							<div class="col-md-5 col-sm-4">
-								<button type="submit" class="btn btn-success btn-lg">SUBMIT</button>
-							</div>
-						</div>
-					</form>
-					<span id="result" class="alertMsg"></span> </div>
-				</div>
- 
-
-		</div><! --/container -->
+			<div id="mc_embed_signup">
+<form action="//tellingapp.us8.list-manage.com/subscribe/post?u=977411a61f122fefdeb147958&amp;id=9104bf3bca" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_977411a61f122fefdeb147958_9104bf3bca" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+</form>
+</div>
 	</main><! --/main -->
  
 
