--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
  
 			<div id="mc_embed_signup">
 <form action="//tellingapp.us8.list-manage.com/subscribe/post?u=977411a61f122fefdeb147958&amp;id=9104bf3bca" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-	
+	<label for="mce-EMAIL">Subscribe to our mailing list</label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_977411a61f122fefdeb147958_9104bf3bca" tabindex="-1" value=""></div>
