--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 	<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; width:100px;}
+	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif;}
 	
 </style>
 </head>
