--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  
 			<h1>An app that lets you <strong>TELL</strong> a story.</h1>
  
-			<div id="mc_embed_signup" style="width: 500px; margin:auto;">
+			<div id="mc_embed_signup" style="width: 500px; margin:0 auto;">
 <form action="//tellingapp.us8.list-manage.com/subscribe/post?u=977411a61f122fefdeb147958&amp;id=9104bf3bca" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	<label for="mce-EMAIL">Subscribe to our mailing list</label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
